# culina

./: README.md
backend/culina-backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO  alembic.ini  docker-compose.dev.yml  pyproject.toml
backend/culina-backend/.claude/skills/git-add-and-commit-and-push/: SKILL.md
backend/culina-backend/.claude/skills/lint-and-format/: SKILL.md
backend/culina-backend/alembic/: env.py
backend/culina-backend/alembic/versions/: 04ca369645d5_initial_schema.py  6f1af01086be_initial_schema.py  937953439339_initial_schema.py  bb5e772fa171_initial_schema.py  c16f3b621cad_initial_schema.py
backend/culina-backend/data/afcd/: afcd_nutrition.json
backend/culina-backend/docs/: database-schema.md
backend/culina-backend/scripts/: chat_nutrition.py  download_afcd.sh  process_afcd.py  reset_db.sh  seed_afcd.py  seed_dev_data.py
backend/culina-backend/src/culina_backend/: ai_settings.yaml  app.py  config.py  logging.py
backend/culina-backend/src/culina_backend/ai/: conversation_store.py  nutrition_lookup.py  search.py
backend/culina-backend/src/culina_backend/ai/agent/: __init__.py  search_agent.py
backend/culina-backend/src/culina_backend/ai/model/: __init__.py  follow_up.py
backend/culina-backend/src/culina_backend/ai/tool/: __init__.py  exa.py  nutrition.py
backend/culina-backend/src/culina_backend/auth/: dependencies.py  jwt.py
backend/culina-backend/src/culina_backend/database/: __init__.py  base.py  models.py
backend/culina-backend/src/culina_backend/model/: __init__.py  meal.py  nutrition.py  user.py  user_nutrition.py
backend/culina-backend/src/culina_backend/route/: auth.py  dependencies.py  errors.py  lookup.py  meals.py  nutrition_entries.py  schemas.py  suggestions.py  summary.py  users.py
backend/culina-backend/src/culina_backend/service/: __init__.py  converters.py  embedding.py  errors.py  lookup.py  meal.py  nutrition_entry.py  rate_limit.py  summary.py  user.py
backend/culina-backend/src/culina_backend/service/suggestion/: frequency.py  popular.py  random.py  service.py  strategy.py
backend/culina-backend/src/culina_backend/settings/: ai_settings.yaml  general_settings.yaml
backend/culina-backend/tests/: conftest.py
backend/culina-backend/tests/auth/: test_dependencies.py  test_jwt.py
backend/culina-backend/tests/service/: test_converters.py  test_meal.py  test_nutrition_entry.py  test_user.py
explore/: .env.example  pyproject.toml
explore/notebooks/data/: afcd.ipynb  fdc.ipynb  fs.ipynb
explore/scripts/: download_afcd.sh
frontend/: CLAUDE.md  README.md  index.html  package-lock.json  package.json  (+1 more)
(+25 files in other folders)
