[project]
name = "culina-backend"
version = "0.1.0"
description = "Backend for Culina."
readme = "README.md"
authors = [
    { name = "Scott Yip", email = "scottyip88@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
