[project]
name = "culina-backend"
version = "0.1.0"
description = "Backend for Culina."
readme = "README.md"
authors = [
    { name = "Scott Yip", email = "scottyip88@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.67.0",
    "exa-py>=1.0.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "alembic>=1.15.0",
    "pgvector>=0.3.0",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[project.optional-dependencies]
scripts = [
    "pandas>=2.0",
    "openpyxl>=3.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
